# RUSHA

./: .gitignore  Dockerfile  Dockerfile.nodejs  Dockerfile.openssh-server  README.md  deploy.sh  docker-compose-dev.yml  docker-compose-mssql-dev.yml  docker-compose-postgres-dev.yml  docker-compose-test.yml  pyproject.toml  run.sh
rusha_django_project/: .gitignore  Dockerfile  celerybeat-schedule  dequeue_new_applications.py  nginx_restart_subscriber.py  pyproject.toml
rusha_django_project/api_users/: models.py  serializers.py  urls.py  views.py
rusha_django_project/api_users/migrations/: 0001_initial.py
rusha_django_project/applications/: models.py  serializers.py  urls.py  views.py
rusha_django_project/celery_tasks/: __init__.py  celery_beat.py  celery_worker.py  create_application.py  create_git_repo.py  create_nginx_conf.py  models.py  serializers.py
rusha_django_project/content_api/: admin.py  models.py  serializers.py  urls.py  views.py
rusha_django_project/cron_job/helpers/: queries.py  (+2 more)
rusha_django_project/projects/: apps.py  models.py  serializers.py  urls.py
rusha_django_project/rusha_django/: celery.py  nginx_restart.py  settings.py  urls.py  wsgi.py
rusha_django_project/rusha_projects/: apps.py  models.py
rusha_django_project/rushiwa/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rusha_django_project/rushiwa_applications_api/: models.py  serializers.py  tasks.py  urls.py  views.py
rusha_django_project/user_cache/: apps.py  models.py  urls.py  views.py
rusha_django_project/ws_server/: consumer.py  websocket.py
(+114 files in other folders)
