[tool.poetry]
name = "rusha"
version = "0.1.0"
description = ""
authors = ["emmanuel <kipronofb@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
redis = "^4.4.2"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
